# Q4-Assignment1

Practical task/: Uv
Practical task/hello_agent/async-agent/: main.py  pyproject.toml
Practical task/hello_agent/sync-agent/: main.py  pyproject.toml
Practical task/lite_llm/: .gitignore  main.py  pyproject.toml
Practical task/openrouter/: .env  .gitignore  pyproject.toml
Practical task/openrouter/src/openrouter/: main.py
Practical task/uv/: README.md
Research/: agentic ai presentation.pptx
